chnaged himself to herslef, minor change

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                       <span class="badge badge-primary badge-top">2+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-shally-mam-288x288.jpg" alt="Shally Ma'm" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Shally Ma'm</h5>
-                      <p class="mb-0">Shally Ma'm has 2+ years of teaching experience with deep knowledge in Social Science. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling himself, professional development, and devising interesting ways of teaching.</span>
+                      <p class="mb-0">Shally Ma'm has 2+ years of teaching experience with deep knowledge in Social Science. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span>
                     </div>
                   </div>
 
