--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8">
-    <title>Annu Classes - by Patwatoli teachers at Gaya town</title>
+    <title>Annu Classes - Coaching for CBSE class VII-XII</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry)  by Patwatoli teachers with preparation of NTSE, KVPY, Olympiad and other competitive examinations">
+    <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry) with preparation of NTSE, KVPY, Olympiad and other competitive examinations">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -78,7 +78,7 @@
                 </li>
 
               </ul>
-            </div><a id="elearning-header-nav" href="https://online.annuclasses.com/" target="_new" class="btn btn-primary ml-lg-3">E-Learning Platform</a>
+            </div><a id="elearning-header-nav" href="scholarship.html" target="_new" class="btn btn-primary ml-lg-3">Apply for Scholarship</a>
 
           </div>
         </div>
@@ -94,12 +94,11 @@
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
             <h2 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h2>
-            <h4 class="mb-4">
+            <h3 class="mb-4">
               <span>
-                We are resuming classes at coaching center from 7th Feb (Monday). Also, continue to use our E-Learning Platform for coursework as advised by your instructors
-              </span>
-            </h4>
-            <a href="https://online.annuclasses.com/" target="_new" class="btn btn-primary btn-lg">Access E-Learning Platform</a>
+                We are conducting Scholarship Test for classes VII, VIII, IX and X on 19<sup>th</sup>March,2023 (Sunday).
+            </h3>
+            <a href="scholarship.html" target="_new" class="btn btn-primary btn-lg">Apply for Scholarship</a>
           </div>
         </div>
       </div>
@@ -189,7 +188,7 @@
                 <img src="assets/img/annuclasses-experience.png" alt="Highly Experienced" width="96" height="96" />
                 </div>
                 <h4>Highly Experienced</h4>
-                <p class="lead mx-xl-3">Patwatoli teachers with 20+ years of teaching experience</p>
+                <p class="lead mx-xl-3">Teachers with 10+ years of teaching experience</p>
             </div>
 
             </div>
@@ -203,25 +202,25 @@
                 <div class="col text-center">
                   <h2 class="display-4 mx-xl-6">Meet the experts</h2>
                   <p class="lead">
-                    Teachers from Patwatoli who are known for their unique teaching methods
+                    Teachers who are known for their unique teaching methods
                   </p>
                 </div>
               </div>
 
             <div class="row mb-4">
-                <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">20+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-gend-lal-sir-288x288.jpg" alt="Gend Lal Sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Gend Lal Sir</h5>
-                      <p class="mb-0">Gendlal Sir hails from Patwatoli and has 23+ years of experience in teaching students 
+                      <img src="assets/img/teachers/annu-classes-gend-lal-sir-288x288.jpg" alt="Gend lal sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Gend lal Sir</h5>
+                      <p class="mb-0">Gend lal Sir hails from Patwatoli and has 23+ years of experience in teaching students 
                           for school as well competitive examinations. His unique style of teaching methods help students 
                           develop creative thinking, improved imagination which helps them secure good grades in examinations along 
                           with development of skills that are useful for rest of their lives.</p>
                     </div>
                   </div>
 
-                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">5+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-akash-sir-288x288.jpg" alt="Akash Sir" class="avatar avatar-xlg mb-3">
@@ -230,7 +229,7 @@
                     </div>
                   </div>
 
-                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">5+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-vikash--sir-288x288.jpg" alt="Vikash Sir" class="avatar avatar-xlg mb-3">
@@ -239,12 +238,12 @@
                     </div>
                   </div>
 
-                  <div class="col-xl-3 col-lg-3 col-md-6 aos-init aos-animate mb-2" data-aos="fade-up" data-aos-delay="NaN">
+                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center">
                       <span class="badge badge-primary badge-top">2+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-shally-mam-288x288.jpg" alt="Shally Ma'm" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Shally Ma'm</h5>
-                      <p class="mb-0">Shally Ma'm has 2+ years of teaching experience with deep knowledge in Social Science. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span>
+                      <img src="assets/img/teachers/annu-classes-shally-mam-288x288.jpg" alt="Shaily Ma'm" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Shaily Ma'm</h5>
+                      <p class="mb-0">Shaily Ma'm has 5+ years of teaching experience with deep knowledge in English. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span>
                     </div>
                   </div>
 
@@ -401,7 +400,7 @@
             </div>
 
 
-            <div class="row mb-2 justify-content-center">
+            <!-- <div class="row mb-2 justify-content-center">
                 <div class="col text-center">
                   <h2 class="display-4 mx-xl-6">Events & Celebrations</h2>
                   <p class="lead">
@@ -409,7 +408,7 @@
                   </p>
                 </div>
               </div>
-        
+         -->
 
                 <div class="row mb-2">
                     <div class="col text-center">
@@ -546,7 +545,7 @@
                                 </g>
                             </svg>
                             <div class="ml-3">
-                                <a href="tel:+917783839910">+91 77 838 399 10</a>
+                                <a href="tel:+917033815533">+91 70 338 155 33</a>
                                 <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
                             </div>
                         </li>
