scholarship_image added

--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@
                         <li class="nav-item">
                             <a href="#location" class="nav-link">Location</a>
                         </li>
-                        <li class="nav-item">
+                      <!--   <li class="nav-item">
                             <a id="online-footer-nav" href="#online e-learning" class="nav-link">Online E-Learning</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a id="enquiry-footer-nav" href="scholarship-2020.html" class="nav-link">Scholarship Program</a>
+                            <a id="enquiry-footer-nav" href="scholarship.html" class="nav-link">Scholarship Program</a>
                         </li>
                         <li class="nav-item">
                             <a id="enquiry-footer-nav" href="enquiry.html" target="_blank" class="nav-link">Join Annu Classes</a>
@@ -592,10 +592,10 @@
                     </ul>
                 </div>
                 <div class="col-lg-5 col-xl-4 mt-3 mt-lg-0">
-                    <h5>Online E-Learning Platform</h5>
-                    <p>We have launched our E-Learning platform. Don't let current Coronavirus lockdown stop you from learning. Please make use of it. Click on below button to access</p>
+                    <h5>Apply for Scholarship</h5>
+                    <p>We are conducting Scholarship Test for classes VII, VIII, IX and X on 19thMarch,2023 (Sunday)</p>
                     <p class="mt-3">
-                        <a id="online-footer-cta" href="https://online.annuclasses.com/" class="btn btn-primary">Online E-Learning</a>
+                        <a id="online-footer-cta" href="scholarship.com" class="btn btn-primary">Scholarship Test</a>
                     </p>
                     <br>
                     <h5>Any questions?</h5>
