--- a/scholarship.html
+++ b/scholarship.html
@@ -106,7 +106,7 @@
         </div>
         <div class="row justify-content-center mt-6 aos-init aos-animate" data-aos="fade-up" data-delay="100">
           <div class="col-lg-12">
-            <img src="assets/img/scholarship-2023.jpg" alt="Image" class="rounded shadow-lg">
+            <img src="assets/img/scholarship-2023.JPG" alt="Image" class="rounded shadow-lg">
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
                 <div>
                   <h5>1. Register for Scholarship Test</h5>
                   <p>
-                    You can easily <a href="scholarship-2020-registration-form.html" target="_blank">apply online</a> or visit our office near Azad Park in Murarpur, Gaya to fill registration form (map <a href="#location">location</a> below).
+                    You can easily <a href="scholarship-registration-form.html" target="_blank">apply online</a> or visit our office near Azad Park in Murarpur, Gaya to fill registration form (map <a href="#location">location</a> below).
                   </p>
                 </div>
               </li>
@@ -214,7 +214,7 @@
 
         <div class="row justify-content-center text-center mt-4">
           <div class="col-xl-8 col-lg-9">
-            <a id="enquiry-header-nav" href="scholarship-2020-registration-form.html" target="_blank" class="btn btn-primary ml-lg-3">Register Online</a>
+            <a id="enquiry-header-nav" href="scholarship-registration-form.html" target="_blank" class="btn btn-primary ml-lg-3">Register Online</a>
           </div>
         </div>
 
