change scholarship.com to .html

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                     <h5>Apply for Scholarship</h5>
                     <p>We are conducting Scholarship Test for classes VII, VIII, IX and X on 19thMarch,2023 (Sunday)</p>
                     <p class="mt-3">
-                        <a id="online-footer-cta" href="scholarship.com" class="btn btn-primary">Scholarship Test</a>
+                        <a id="online-footer-cta" href="scholarship.html" class="btn btn-primary">Scholarship Test</a>
                     </p>
                     <br>
                     <h5>Any questions?</h5>
