--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
+
     <meta charset="utf-8">
     <title>Annu Classes - Coaching for CBSE class VII-XII</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -208,44 +209,82 @@
               </div>
 
             <div class="row mb-4">
-                <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
-                    <div class="card card-lg card-body align-items-center">
-                      <span class="badge badge-primary badge-top">20+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-gend-lal-sir-288x288.jpg" alt="Gend lal sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Gend lal Sir</h5>
-                      <p class="mb-0">Gend lal Sir hails from Patwatoli and has 23+ years of experience in teaching students 
-                          for school as well competitive examinations. His unique style of teaching methods help students 
-                          develop creative thinking, improved imagination which helps them secure good grades in examinations along 
-                          with development of skills that are useful for rest of their lives.</p>
+                <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">35+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-subodh-sir.jpeg" alt="Dr. Subodh Verma" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Dr. Subodh Verma</h5>
+                      <p class="mb-0">
+                      	<small>Dr.Subodh Verma Sir holds PhD in Zoology and Botany, with 35+ years of teaching experience across premier institutes across India. More than 1,000+ students have cleared medical competitive examinations like NEET and others, under his guidance. Highly energetic, practical approach to problem solving, interactive classroom, and holistic guidance for all round development of the students
+                      	</small>	
+                      </p>
                     </div>
                   </div>
 
-                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
-                    <div class="card card-lg card-body align-items-center">
-                      <span class="badge badge-primary badge-top">5+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-akash-sir-288x288.jpg" alt="Akash Sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Akash Sir</h5>
-                      <p class="mb-0">After cracking India's most challenging engineering exam IIT-JEE, Akash Sir has set forth his motive to guide students in their academic journey. He has also excelled in multiple state and national level competitive examinations. His passion, hard work, guidance and uniqueness in teaching will help students find their potential & achieve best outcomes.</p>
+                  <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">35+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-ashok-sir.jpeg" alt="Dr. Ashok Mehta" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Dr. Ashok Mehta</h5>
+                      <p class="mb-0">
+                      	<small>Dr. Ashok Mehta Sir holds PhD in Physics and is an executive member in premium college, with 35+ years of teaching experience. He brings multiple years of teaching and personal experience in guiding, helping students in building their career, and in their preparation for competitive examinations</small></p>
                     </div>
                   </div>
 
-                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
-                    <div class="card card-lg card-body align-items-center">
-                      <span class="badge badge-primary badge-top">5+ years teaching experience</span>
+                   <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">10x+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-jayant-sir.jpeg" alt="Jayant Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Jayant Sir</h5>
+                      <p class="mb-0">
+                      	<small>Jayant Sir, set forth his motive to guide students in their academic journey. He brings 10+ years of experience and is a Mathematics expert, having taught across premier institutes across India. Studying in his classes is a kind of experience that each student should experience
+</span>					</small></p>
+                    </div>
+                  </div>
+
+
+                   <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center"  style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">7+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-sarvesh-sir.jpeg" alt="Sarvesh Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Sarvesh Sir</h5>
+                      <p class="mb-0">
+                      	<small>Sarvesh Sir has 7+ years of  teaching experience with deep knowledge in Science and Mathematics. He loves teaching and has superior presentation and organization skills. When he is not teaching, he spends endless hours designing lessons, classroom material preparations, upskilling himself, professional development, and devising interesting ways of teaching.
+</span>					</small></p>
+                    </div>
+                  </div>
+
+
+                  <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">7+ years teaching experience</span>
                       <img src="assets/img/teachers/annu-classes-vikash--sir-288x288.jpg" alt="Vikash Sir" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Vikash Sir</h5>
-                      <p class="mb-0">Vikash Sir is a meritorious, dedicated and hardworking person with 7+ years of teaching experience. He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help a student to achieve their dream.</p>
+                      <p class="mb-0">
+                      	<small>Vikash Sir is a meritorious, dedicated and hardworking person with 7+ years of teaching experience. He teaches Mathematics and Physics and specializes in two-way teaching style and engages students in learning. Qualities that set him apart from others are his friendliness and approachability because he believes a teacher's job is to help a student to achieve their dream.</small></p>
                     </div>
                   </div>
 
-                  <div class="col-xl-6 col-lg-6 col-md-12 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
-                    <div class="card card-lg card-body align-items-center">
-                      <span class="badge badge-primary badge-top">2+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-shally-mam-288x288.jpg" alt="Shaily Ma'm" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Shaily Ma'm</h5>
-                      <p class="mb-0">Shaily Ma'm has 5+ years of teaching experience with deep knowledge in English. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span>
+                    <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">7+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-akashdeep-sir.png" alt="Akash Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Akash Sir</h5>
+                      <p class="mb-0">
+                      	<small>Akash Sir, has 7+ years of teaching experience and is passionate, hard working, and his uniqueness in teaching will help students find their potential & achieve best outcomes. His teaching methods, logical understanding and interaction with students makes classes fun, interesting and enjoyable while learning.</small> </p>
                     </div>
                   </div>
+
+                  <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
+                    <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
+                      <span class="badge badge-primary badge-top">5+ years teaching experience</span>
+                      <img src="assets/img/teachers/lovely mam.jpg" alt="Lovely M'am" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Lovely M'am</h5>
+                      <p class="mb-0">
+                      	<small>Lovely M'am has 5+ years of teaching experience with deep knowledge in English. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span></small></p>
+                    </div>
+                  </div>
+                 
 
             </div>
         </div>
