--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </li>
 
               </ul>
-            </div><a id="elearning-header-nav" href="scholarship.html" target="_new" class="btn btn-primary ml-lg-3">Apply for Scholarship</a>
+            </div><a id="elearning-header-nav" href="enquiry.html" target="_new" class="btn btn-primary ml-lg-3">Join Annu Classes</a>
 
           </div>
         </div>
@@ -95,11 +95,11 @@
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
             <h2 class="mb-4">Coaching for CBSE VII - XII classes with NTSE, KVPY and Olympiad preparation</h2>
-            <h3 class="mb-4">
+            <h2 class="mb-4">
               <span>
-                We are conducting Scholarship Test for classes VII, VIII, IX and X on 19<sup>th</sup>March,2023 (Sunday).
-            </h3>
-            <a href="scholarship.html" target="_new" class="btn btn-primary btn-lg">Apply for Scholarship</a>
+               Exclusive NEET & IIT-JEE Coaching for 11th & 12th Batches
+            </h2>
+            <a href="enquiry.html" target="_new" class="btn btn-primary btn-lg">Join Annu Classes</a>
           </div>
         </div>
       </div>
@@ -245,11 +245,11 @@
 
                    <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center"  style="padding: 1rem;">
-                      <span class="badge badge-primary badge-top">7+ years teaching experience</span>
-                      <img src="assets/img/teachers/annu-classes-sarvesh-sir.jpeg" alt="Sarvesh Sir" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Sarvesh Sir</h5>
+                      <span class="badge badge-primary badge-top">15+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-sarita-mam.jpeg" alt="Dr.Sarita" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Dr.Sarita Roy</h5>
                       <p class="mb-0">
-                      	<small>Sarvesh Sir has 7+ years of  teaching experience with deep knowledge in Science and Mathematics. He loves teaching and has superior presentation and organization skills. When he is not teaching, he spends endless hours designing lessons, classroom material preparations, upskilling himself, professional development, and devising interesting ways of teaching.
+                      	<small>Dr.Sarita M'am has 15+ years of  teaching experience with deep knowledge in Science and Chemistry. She has completed her PhD in Chemistry from Jabalpur. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours designing lessons, classroom material preparations, professional development, and devising interesting ways of teaching.
 </span>					</small></p>
                     </div>
                   </div>
@@ -277,11 +277,11 @@
 
                   <div class="col-xl-3 col-lg-3 col-md-4 aos-init aos-animate mb-1" data-aos="fade-up" data-aos-delay="NaN">
                     <div class="card card-lg card-body align-items-center" style="padding: 1rem;">
-                      <span class="badge badge-primary badge-top">10+ years teaching experience</span>
-                      <img src="assets/img/teachers/lovely mam.jpg" alt="Lovely M'am" class="avatar avatar-xlg mb-3">
-                      <h5 class="mb-2">Lovely M'am</h5>
+                      <span class="badge badge-primary badge-top">7+ years teaching experience</span>
+                      <img src="assets/img/teachers/annu-classes-ujjwal-sir.jpg" alt="Ujjwal Sir" class="avatar avatar-xlg mb-3">
+                      <h5 class="mb-2">Ujjwal Sir</h5>
                       <p class="mb-0">
-                      	<small>Lovely M'am has 10+ years of teaching experience with deep knowledge in English. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours for designing lessons, classroom material preparations, upskilling herself, professional development, and devising interesting ways of teaching.</span></small></p>
+                      	<small>Ujjwal Sir has 7+ years of teaching experience with deep knowledge in English. He loves teaching and has superior presentation and organization skills. When he is not teaching, he spends endless hours for designing lessons, classroom material preparations, upskilling himself, professional development, and devising interesting ways of teaching.</span></small></p>
                     </div>
                   </div>
                  
@@ -412,7 +412,7 @@
 
     <!-- Events -->
     <section id="events">
-        <div class="container">
+       <!--  <div class="container">
             <div class="row mb-5 justify-content-center">
               <div class="col text-center">
                 <h2 class="display-4 mx-xl-6">COVID Precautions during ongoing classes</h2>
@@ -436,20 +436,44 @@
                         <img src="assets/img/covid/annu-classes-covid-precautions-3.jpg" alt="Covid precautions at Annu Classes" class="rounded">
                     </a>
                 </div>
-            </div>
+            </div> -->
 
 
-            <!-- <div class="row mb-2 justify-content-center">
+            <div class="row mb-2 justify-content-center">
                 <div class="col text-center">
                   <h2 class="display-4 mx-xl-6">Events & Celebrations</h2>
-                  <p class="lead">
+                  <!-- <p class="lead">
                     Before COVID era &#128512;
-                  </p>
+                  </p> -->
                 </div>
               </div>
-         -->
+        
 
-                <div class="row mb-2">
+              <div class="row mt-4 mb-2">
+                    <div class="col text-center">
+                        <h2>Independence Day</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-4">
+                        <a href="assets/img/events/annu-classes-independence-100.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-independence-100.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <a href="assets/img/events/annu-classes-independence-1000.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-independence-1000.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-4">
+                        <a href="assets/img/events/annu-classes-events-independence-205.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-events-independence-205.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="row mt-4 mb-2">
                     <div class="col text-center">
                         <h2>Children's day celebrations</h2>
                     </div>
@@ -480,18 +504,19 @@
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-4">
-                        <a href="assets/img/events/annu-classes-events-teachers-day-1.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
-                            <img src="assets/img/events/annu-classes-events-teachers-day-1.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        <a href="assets/img/events/annu-classes-events-teachers-day-200.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-events-teachers-day-200.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
                         </a>
                     </div>
                     <div class="col-6 col-md-4">
-                        <a href="assets/img/events/annu-classes-events-teachers-day-2.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
-                            <img src="assets/img/events/annu-classes-events-teachers-day-2.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        <a href="assets/img/events/annu-classes-events-teacher-day-25.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-events-teacher-day-25.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
                         </a>
                     </div>
                     <div class="col-6 col-md-4">
-                        <a href="assets/img/events/annu-classes-events-teachers-day-3.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
-                            <img src="assets/img/events/annu-classes-events-teachers-day-3.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+                        <a href="assets/img/events/annu-classes-events-teachers-24.jpg" data-fancybox="Gallery Example" data-options="{&quot;loop&quot;:true}">
+                            <img src="assets/img/events/annu-classes-events-teachers-24.jpg" alt="Children's day celebrations at Annu Classes" class="rounded">
+
                         </a>
                     </div>
                 </div>
@@ -584,7 +609,7 @@
                                 </g>
                             </svg>
                             <div class="ml-3">
-                                <a href="tel:+917033815533">+91 70 338 155 33</a>
+                                <a href="tel:+919199994989">+91 91 999 949 89</a>
                                 <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
                             </div>
                         </li>
@@ -631,10 +656,11 @@
                     </ul>
                 </div>
                 <div class="col-lg-5 col-xl-4 mt-3 mt-lg-0">
-                    <h5>Apply for Scholarship</h5>
-                    <p>We are conducting Scholarship Test for classes VII, VIII, IX and X on 19thMarch,2023 (Sunday)</p>
+                    <h5>Teacher's Enquiry</h5>
+                    <!-- <p>If you are interested to teach at Annu Classes, Please send your resume at classes.annu@gmail.com.</p> -->
+                     <p>Qualified and dedicated teacher's are required, apply and send your resume at classes.annu@gmail.com.</p>
                     <p class="mt-3">
-                        <a id="online-footer-cta" href="scholarship.html" class="btn btn-primary">Scholarship Test</a>
+                        <a id="apply-footer-cta" href="https://forms.gle/g8UBipaL8Dy4sMcbA" class="btn btn-primary">Apply Now</a>
                     </p>
                     <br>
                     <h5>Any questions?</h5>
