Update home page with changes

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <img src="assets/img/annuclasses-experience.png" alt="Highly Experienced" width="96" height="96" />
                 </div>
                 <h4>Highly Experienced</h4>
-                <p class="lead mx-xl-3">Teachers with 10+ years of teaching experience</p>
+                <p class="lead mx-xl-3">Teachers with 30+ years of teaching experience</p>
             </div>
 
             </div>
@@ -249,7 +249,7 @@
                       <img src="assets/img/teachers/annu-classes-sarita-mam.jpeg" alt="Dr.Sarita" class="avatar avatar-xlg mb-3">
                       <h5 class="mb-2">Dr.Sarita Roy</h5>
                       <p class="mb-0">
-                      	<small>Dr.Sarita M'am has 15+ years of  teaching experience with deep knowledge in Science and Chemistry. She has completed her PhD in Chemistry from Jabalpur. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours designing lessons, classroom material preparations, professional development, and devising interesting ways of teaching.
+                      	<small>Dr.Sarita Mam has 15+ years of  teaching experience with deep knowledge in Science and Chemistry. She has completed her PhD in Chemistry from Jabalpur. She loves teaching and has superior presentation and organization skills. When she is not teaching, she spends endless hours designing lessons, classroom material preparations, professional development, and devising interesting ways of teaching.
 </span>					</small></p>
                     </div>
                   </div>
