Added scholarship banner, updated teacher details

--- a/scholarship.html
+++ b/scholarship.html
@@ -13,9 +13,9 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8">
-    <title>Annu Classes - Scholarship 2023 for class VII-X students for new batches starting from 23<sup>rd</sup> March 2023.</title>
+    <title>Annu Classes - Scholarship 2025 for class VII-X students for new batches starting from 23<sup>rd</sup> March 2023.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annu Classes: Avail upto 100% scholarship on Tuition fees for classes VII - XII for new batches starting from 23rd March 2023. Scholarship test date on 19th March 2023. Last date to apply: 18th March 2023. Visit our website to apply online.">
+    <meta name="description" content="Annu Classes: Avail upto 75% scholarship on Tuition fees for classes VII - X for new batches starting from 1st March 2025 for IX-X and new batches starting from 1<sup>st</sup> April 2025 for VII-VIII . Scholarship test date on 23<sup>rd</sup> March 2025. Last date to apply: 22<sup>nd</sup> March 2025. Visit our website to apply online.">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
@@ -97,8 +97,8 @@
 
           <div class="col-xl-7 col-lg-8 col-md-9">
             <div class="mb-6"></div>
-            <h1 class="display-3">Scholarship Program for 2023</h1>
-            <p class="lead">Register for Scholarship program for new batches of classes VII - X starting from 23<sup>rd</sup> March 2023 and avail up to 100% tuition fee scholarship</p>
+            <h1 class="display-3">Scholarship Program for 2025</h1>
+            <p class="lead">Register for Scholarship program for classes VII - X to be held on 23<sup>rd</sup> March 2025 and avail upto 75% tuition fee scholarship</p>
             <div class="d-flex flex-column flex-sm-row justify-content-center mt-4">
               <a href="scholarship-registration-form.html" target="_blank" class="btn btn-lg btn-primary mx-2 mb-2 mb-sm-0">Register Online</a>
             </div>
@@ -128,30 +128,36 @@
         <div class="row text-center mb-6">
 
           <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="mb-1 text-primary">21<sup>st</sup> February</h2>
+            <h2 class="mb-1 text-primary">1<sup>st</sup> February</h2>
             <p class="lead">Registration <br>open date</p>
           </div>
 
           <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-            <h2 class="mb-1 text-primary">18<sup>th</sup> March</h2>
+            <h2 class="mb-1 text-primary">22<sup>nd</sup> March</h2>
             <p class="lead">Last date <br>to register</p>
           </div>
 
           <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-            <h2 class="mb-1 text-primary">19<sup>th</sup> March</h2>
+            <h2 class="mb-1 text-primary">23<sup>rd</sup> March</h2>
             <p class="lead">Scholarship <br>test date</p>
           </div>
         </div>
 
         <div class="row text-center">
-          <div class="col-md-6 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="mb-1 text-primary">22<sup>nd</sup> March</h2>
+          <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
+            <h2 class="mb-1 text-primary">30<sup>th</sup> March</h2>
             <p class="lead">Results <br>announcement</p>
           </div>
 
-          <div class="col-md-6 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="mb-1 text-primary">23<sup>rd</sup> March</h2>
-            <p class="lead">New batch <br>start date</p>
+          <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
+            <h2 class="mb-1 text-primary">1<sup>st</sup> March</h2>
+            <p class="lead">New batch for class IX-X <br>start date</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
+            <h2 class="mb-1 text-primary">1<sup>st</sup> April</h2>
+            <p class="lead">New batch for class VII-VIII <br>start date</p>
           </div>
         </div>
         
@@ -341,8 +347,8 @@
                                 </g>
                             </svg>
                             <div class="ml-3">
-                                <a href="tel:+917033815533">+91 70 338 155 33</a>
-                                <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
+                                <a href="tel:+917033815533">+91 9199994989</a>
+                                <span class="d-block text-muted text-small">All days, 11am - 8pm</span>
                             </div>
                         </li>
                         <!-- Icon for Whatsapp-->
