Website changes for Scholarship 2025

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#experts" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Experts</a>
+                    <a href="scholarship.html" target="_new" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Scholarship-2025</a>
                 </li>
 
                 <li class="nav-item">
@@ -72,10 +72,6 @@
 
                 <li class="nav-item">
                     <a href="#events" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Events</a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="#location" class="nav-link dropdown-toggle" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Location</a>
                 </li>
 
                 <li class="nav-item">
@@ -102,8 +98,8 @@
             <div class="alert alert-danger mt-4 mb-3" role="alert">
               <div class="text-dark mb-2">
                 Registrations for 2025 Scholarship Program for class VII - X is open now. Examination will be held on <b>23<sup>rd</sup> March, 2025</b>. 
-                <br><br>
-                10 students from every class (total 40 students) availed scholarship in 2024.<br>
+                <!-- <br><br> -->
+                <!-- 10 students from every class (total 40 students) availed scholarship in 2024.<br> -->
               </div>
               <a href="scholarship.html" target="_new" class="mt-1 btn btn-primary btn-sm">Apply for Scholarship</a>
             </div>
@@ -188,7 +184,7 @@
                   <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-attention.png" alt="Attention" width="96" height="96" />
                   </div>
-                  <h4>1:1 Attention</h4>
+                  <h4>Regular weekly tests</h4>
                   <p class="lead mx-xl-3">Individual attention, dedicated doubt classes and regular weekly tests</p>
               </div>
               
@@ -233,7 +229,7 @@
                 <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-doubt-classes.png" alt="Sunday doubt classes" width="60" height="60" />
                 </div>
-                <p class="lead mx-xl-3">Weekly doubt classes every Sunday</p>
+                <p class="lead mx-xl-3">Weekly doubt classes on Sunday</p>
               </div>
               
               <div class="col-sm-3 text-center">
@@ -247,7 +243,7 @@
                 <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-library-facility.png" alt="Library facility" width="60" height="60" />
                 </div>
-                <p class="lead mx-xl-3">Library facility with range of books</p>
+                <p class="lead mx-xl-3">Library facility with wide range of books for practice</p>
               </div>
 
             </div>
@@ -730,6 +726,19 @@
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
                         <li class="mb-3 d-flex">
+                          <svg class="icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Icon for Location Mark</title>
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <rect opacity="0" x="0" y="0" width="24" height="24"></rect>
+                                    <path d="M5,10.5 C5,6 8,3 12.5,3 C17,3 20,6.75 20,10.5 C20,12.8325623 17.8236613,16.03566 13.470984,20.1092932 C12.9154018,20.6292577 12.0585054,20.6508331 11.4774555,20.1594925 C7.15915182,16.5078313 5,13.2880005 5,10.5 Z M12.5,12 C13.8807119,12 15,10.8807119 15,9.5 C15,8.11928813 13.8807119,7 12.5,7 C11.1192881,7 10,8.11928813 10,9.5 C10,10.8807119 11.1192881,12 12.5,12 Z"
+                                          fill="#000000" fill-rule="nonzero"></path>
+                                </g>
+                            </svg>
+                            <div class="ml-3">
+                                <a href="https://maps.app.goo.gl/LRhjr3W8b1d8P5tX7" class="mt-1" target="_blank">Google Maps</a>
+                            </div>
+                        </li>
+                        <li class="mb-3 d-flex">
                             <svg class="icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <title>Icon for Location Mark</title>
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -740,10 +749,12 @@
                             </svg>
                             <div class="ml-3">
                               <span>Khairat Ahmed Road
-                                  <br>Near Azad Park
-                                  <br>Murarpur
-                                  <br>Gaya - 823 001
-                                  <br>Bihar, India</span>
+                                <br>Near Azad Park
+                                <br>Murarpur
+                                <br>Gaya - 823 001
+                                <br>Bihar, India
+                                <br><a href="https://maps.app.goo.gl/LRhjr3W8b1d8P5tX7" class="mt-1" target="_blank">Google Maps</a>
+                              </span>
                             </div>
                         </li>
                         <li class="mb-3 d-flex">
