--- a/scholarship.html
+++ b/scholarship.html
@@ -106,7 +106,7 @@
         </div>
         <div class="row justify-content-center mt-6 aos-init aos-animate" data-aos="fade-up" data-delay="100">
           <div class="col-lg-12">
-            <img src="assets/img/scholarship-2023.JPG" alt="Image" class="rounded shadow-lg">
+            <img src="assets/img/scholarship-2025-web.JPG" alt="Annu Classes - Scholarship 2025" class="rounded shadow-lg" style="width: 90%; height: 90%">
           </div>
         </div>
       </div>
@@ -151,16 +151,22 @@
 
           <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
             <h2 class="mb-1 text-primary">1<sup>st</sup> March</h2>
-            <p class="lead">New batch for class IX-X <br>start date</p>
+            <p class="lead">New batch for class IX-X <br></p>
           </div>
+
+          <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
+            <h2 class="mb-1 text-primary">1<sup>st</sup> April</h2>
+            <p class="lead">New batch for class VII-VIII
+          </div>
+
         </div>
 
-        <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
+      <!--   <div class="col-md-4 mb-4 mb-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="600">
             <h2 class="mb-1 text-primary">1<sup>st</sup> April</h2>
             <p class="lead">New batch for class VII-VIII <br>start date</p>
           </div>
         </div>
-        
+         -->
       </div>
     </section>
 
@@ -192,7 +198,7 @@
                 <div>
                   <h5>2. Collect Admit Card</h5>
                   <p>
-                    Admit card will be e-mailed to you by 18<sup>th</sup> Mar 2023. You can take its print-out and paste your smiling passport size photograph before reaching Test center. 
+                    Admit card will be e-mailed to you by 20<sup>th</sup> Mar 2025. You can take its print-out and paste your smiling passport size photograph before reaching Test center. Test fees of Rs 50/-  to be paid offline while collecting Scholarship Test Admit card.
                   </p>
                 </div>
               </li>
@@ -201,7 +207,12 @@
                 <div>
                   <h5>3. Appear for Scholarship Test</h5>
                   <p>
-                    Appear for Test as per the date mentioned on your Admit card (19<sup>th</sup>March). Give your best and we are sure that you will be among top scorers to avail tuition fee scholarship. 
+                    Appear for Test as per the date mentioned on your Admit card (23<sup>rd</sup>March). Give your best and we are sure that you will be among top scorers to avail tuition fee scholarship. 
+                    <br>
+                    <br>Test date: <strong>23rd March 2025</strong>
+                    <br>Reporting time: <strong>09:30AM</strong>
+                    <br>Duration: <strong>90 minutes</strong>
+                    <br>Venue: <strong><a href="https://maps.app.goo.gl/LRhjr3W8b1d8P5tX7" class="mt-1" target="_blank">Link to Google Maps</a></strong>
                   </p>
                 </div>
               </li>
@@ -210,7 +221,7 @@
                 <div>
                   <h5>4. Results</h5>
                   <p>
-                    Results will be published on the website on 22<sup>nd</sup> Mar 2023 on this page itself. You will also be notified by Email & Whatsapp. 
+                    Results will be published on the website on 30<sup>th</sup> Mar 2025 on this page itself. You will also be notified by Email & Whatsapp. 
                   </p>
                 </div>
               </li>
@@ -321,6 +332,19 @@
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
                         <li class="mb-3 d-flex">
+                          <svg class="icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Icon for Location Mark</title>
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <rect opacity="0" x="0" y="0" width="24" height="24"></rect>
+                                    <path d="M5,10.5 C5,6 8,3 12.5,3 C17,3 20,6.75 20,10.5 C20,12.8325623 17.8236613,16.03566 13.470984,20.1092932 C12.9154018,20.6292577 12.0585054,20.6508331 11.4774555,20.1594925 C7.15915182,16.5078313 5,13.2880005 5,10.5 Z M12.5,12 C13.8807119,12 15,10.8807119 15,9.5 C15,8.11928813 13.8807119,7 12.5,7 C11.1192881,7 10,8.11928813 10,9.5 C10,10.8807119 11.1192881,12 12.5,12 Z"
+                                          fill="#000000" fill-rule="nonzero"></path>
+                                </g>
+                            </svg>
+                            <div class="ml-3">
+                                <a href="https://maps.app.goo.gl/LRhjr3W8b1d8P5tX7" class="mt-1" target="_blank">Google Maps</a>
+                            </div>
+                        </li>
+                        <li class="mb-3 d-flex">
                             <svg class="icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <title>Icon for Location Mark</title>
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -331,7 +355,7 @@
                             </svg>
                             <div class="ml-3">
                               <span>Khairat Ahmed Road
-                                  <br>Near Azad Park
+                                  <br>Near Dr Vijay Jain
                                   <br>Murarpur
                                   <br>Gaya - 823 001
                                   <br>Bihar, India</span>
