--- a/scholarship-registration-form.html
+++ b/scholarship-registration-form.html
@@ -13,7 +13,7 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8">
-    <meta http-equiv = "refresh" content = "2; url = https://forms.gle/obEeode11YkMzEwX7">
+    <meta http-equiv = "refresh" content = "2; url = https://forms.gle/CdcywH6GfwmpS71UA">
     <title>Annu Classes - by Patwatoli teachers at Gaya town</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Annu Classes: Coaching for CBSE VII - XII classes (Mathematics, Physics, Chemistry, Biology) by Patwatoli teachers.">
@@ -27,6 +27,7 @@
 
   <body>
 
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTMXRVV"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -39,7 +40,7 @@
                 <br><br>
                 Loading Scholarship Registration form..
                 <br><br>
-                <a href="https://forms.gle/obEeode11YkMzEwX7">Please click this link if Enquiry form does not load shortly.</a>
+                <a href="https://forms.gle/CdcywH6GfwmpS71UA">Please click this link if Enquiry form does not load shortly.</a>
             </div>
         </div>
     </div>
