fixed scholarship image extension

--- a/scholarship.html
+++ b/scholarship.html
@@ -106,7 +106,7 @@
         </div>
         <div class="row justify-content-center mt-6 aos-init aos-animate" data-aos="fade-up" data-delay="100">
           <div class="col-lg-12">
-            <img src="assets/img/scholarship-2025-web.JPG" alt="Annu Classes - Scholarship 2025" class="rounded shadow-lg" style="width: 90%; height: 90%">
+            <img src="assets/img/scholarship-2025-web.jpg" alt="Annu Classes - Scholarship 2025" class="rounded shadow-lg" style="width: 90%; height: 90%">
           </div>
         </div>
       </div>
