minor changes in webiste details for Scholarship,2025
minor changes in webiste details for Scholarship,2025

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="alert alert-danger mt-4 mb-3" role="alert">
               <div class="text-dark mb-2">
                 Registrations for 2025 Scholarship Program for class VII - X is open now. Examination will be held on <b>23<sup>rd</sup> March, 2025</b>. 
-                <!-- <br><br> -->
-                <!-- 10 students from every class (total 40 students) availed scholarship in 2024.<br> -->
+                <br><br>
+                 10 students from every class (total 40 students) will be awarded with Scholarships<br>
               </div>
               <a href="scholarship.html" target="_new" class="mt-1 btn btn-primary btn-sm">Apply for Scholarship</a>
             </div>
@@ -108,7 +108,7 @@
           <!-- Main hero content -->
           <div class="col-lg-9 col-xl-8">
             <h1 class="display-3">Where you study, matters.</h1>
-            <h2 class="mb-4">CBSE coaching for classes VII - XII</h2>
+            <h2 class="mb-4">CBSE coaching for classes VII to XII</h2>
             <h2 class="mb-4">
               <span>
                Exclusive Drawing classes for all age group conducted every Sunday at 12:30 PM by Rajesh Rathore Sir 
@@ -184,8 +184,8 @@
                   <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-attention.png" alt="Attention" width="96" height="96" />
                   </div>
-                  <h4>Regular weekly tests</h4>
-                  <p class="lead mx-xl-3">Individual attention, dedicated doubt classes and regular weekly tests</p>
+                  <h4>1:1 Attention & Counselling</h4>
+                  <p class="lead mx-xl-3">Individual attention and dedicated doubt classes</p>
               </div>
               
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
@@ -222,14 +222,14 @@
                 <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-monthly-tests.png" alt="Monthly tests" width="60" height="60" />
                 </div>
-                <p class="lead mx-xl-3">Monthly subject wise tests</p>
+                <p class="lead mx-xl-3">Monthly subject-wise tests</p>
               </div>
 
               <div class="col-sm-3 text-center">
                 <div class="mx-auto mb-4">
                   <img src="assets/img/annuclasses-doubt-classes.png" alt="Sunday doubt classes" width="60" height="60" />
                 </div>
-                <p class="lead mx-xl-3">Weekly doubt classes on Sunday</p>
+                <p class="lead mx-xl-3">Doubt classes on Sunday</p>
               </div>
               
               <div class="col-sm-3 text-center">
@@ -749,7 +749,7 @@
                             </svg>
                             <div class="ml-3">
                               <span>Khairat Ahmed Road
-                                <br>Near Azad Park
+                                <br>Near Dr Vijay Jain
                                 <br>Murarpur
                                 <br>Gaya - 823 001
                                 <br>Bihar, India
@@ -768,7 +768,8 @@
                             </svg>
                             <div class="ml-3">
                                 <a href="tel:+919199994989">+91 91 999 949 89</a>
-                                <span class="d-block text-muted text-small">All days, 10am - 7pm</span>
+                                <span class="d-block text-muted text-small">Mon-Sat, 10am - 7pm</span>
+                                <span class="d-block text-muted text-small">Sun, 12 noon- 3pm</span>
                             </div>
                         </li>
                         <!-- Icon for Whatsapp-->
